add 10000 data download script

--- a/data/data_exploration.ipynb
+++ b/data/data_exploration.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,6 +183,8 @@
     "    print(\"\\nSubclass Distribution:\")\n",
     "    for subcls, count in sorted(subclass_counts.items(), key=lambda x: -x[1]):\n",
     "        print(f\"{subcls}: {count}\")\n",
+    "        \n",
+    "    print(\"\\nSNR Distribution\")\n",
     "    \n",
     "    # Print ZWARNING\n",
     "    print(\"\\nZWARNING Distribution:\")\n",
