final data exploration updates

--- a/data/data_exploration.ipynb
+++ b/data/data_exploration.ipynb
@@ -2,30 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch.utils.data import Dataset, DataLoader, random_split\n",
+    "import glob\n",
+    "import random \n",
+    "import os \n",
+    "import subprocess\n",
     "from collections import defaultdict\n",
+    "\n",
+    "# Astropy Loading\n",
     "import astropy\n",
     "from astropy.io import fits\n",
     "from astropy.table import Table, hstack\n",
     "from astropy.utils.metadata import MergeConflictWarning\n",
-    "import glob\n",
-    "import torch\n",
-    "import random \n",
-    "import os \n",
-    "import subprocess\n",
+    "\n",
+    "# Scientific Python\n",
     "import numpy as np\n",
     "import warnings\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import pandas as pd "
+    "import pandas as pd \n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,11 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Custom PyTorch dataset for lazy loading\n",
+    "# Custom PyTorch dataset for loading\n",
     "class FitsDataset(Dataset):\n",
     "    def __init__(self, file_paths):\n",
     "        self.file_paths = file_paths  # Store file paths\n",
@@ -61,7 +65,7 @@
     "    def __len__(self):\n",
     "        return len(self.file_paths)  # Total number of files\n",
     "\n",
-    "    def getitem(self, idx):\n",
+    "    def __getitem__(self, idx):\n",
     "        file_path = self.file_paths[idx]\n",
     "        \n",
     "        # Read FITS file as Astropy Table\n",
@@ -119,22 +123,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([7.4049, 3.5555, 0.0350, 0.9253, 2.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "        0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.4804, 1.5487, 2.5069,\n",
-      "        2.4406, 1.6370])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset = FitsDataset(file_paths)\n",
-    "print(dataset.getitem(3)[0][4])"
+    "dataset = FitsDataset(file_paths)"
    ]
   },
   {
@@ -148,20 +141,23 @@
     "    subclass_counts = defaultdict(int)\n",
     "    zwarning_zero = 0\n",
     "    total_objects = 0\n",
-    "    problem_childs = 0\n",
     "    \n",
+    "    # New containers for additional analysis\n",
+    "    zwarning_class_counts = defaultdict(int)\n",
+    "    redshifts = defaultdict(list)\n",
+    "    sn_median_all = defaultdict(list)\n",
+    "\n",
     "    for file_path in file_paths:\n",
     "        with fits.open(file_path) as hdul:\n",
     "            if len(hdul) <= 2:\n",
     "                print(f\"Skipping {file_path}: HDU 2 does not exist.\")\n",
     "                continue\n",
     "            hdu2 = hdul[2].data\n",
+    "            \n",
+    "            # Original processing (first object)\n",
     "            main_class = str(hdu2['CLASS'][0]).strip().upper()\n",
     "            raw_subclass = str(hdu2['SUBCLASS'][0]).strip()\n",
-    "            #if main_class == 'QSO':\n",
-    "            #    print(raw_subclass)\n",
     "            \n",
-    "            # Split subclass name to only include main title\n",
     "            clean_subclass = raw_subclass.split('(')[0].split('/')[0].strip()[:2]\n",
     "            if main_class == 'STAR' and len(clean_subclass) == 2:\n",
     "                subclass = clean_subclass\n",
@@ -171,11 +167,26 @@
     "            class_counts[main_class] += 1\n",
     "            subclass_counts[subclass] += 1\n",
     "            \n",
-    "            # ZWARNING\n",
-    "            zwarnings = hdu2['ZWARNING']\n",
-    "            zwarning_zero += (zwarnings == 0).sum()\n",
-    "            total_objects += len(zwarnings)\n",
-    "    \n",
+    "            # New processing (all objects)\n",
+    "            for obj in hdu2:\n",
+    "                total_objects += 1\n",
+    "                cls = str(obj['CLASS']).strip().upper()\n",
+    "                \n",
+    "                # Extract ZWARNING and SN_MEDIAN_ALL values safely\n",
+    "                zwarn = obj['ZWARNING']\n",
+    "                sn_median_all_value = float(obj['SN_MEDIAN_ALL'])\n",
+    "                \n",
+    "                # Collect data for histograms\n",
+    "                redshifts[cls].append(float(obj['Z']))\n",
+    "                sn_median_all[cls].append(sn_median_all_value)\n",
+    "                \n",
+    "                # Track ZWARNING class distribution\n",
+    "                if zwarn != 0:\n",
+    "                    zwarning_class_counts[cls] += 1\n",
+    "                else:\n",
+    "                    zwarning_zero += 1\n",
+    "\n",
+    "    # Original print statements\n",
     "    print(\"\\nClass Distribution:\")\n",
     "    for cls, count in class_counts.items():\n",
     "        print(f\"{cls}: {count} ({count/sum(class_counts.values()):.1%})\")\n",
@@ -183,119 +194,71 @@
     "    print(\"\\nSubclass Distribution:\")\n",
     "    for subcls, count in sorted(subclass_counts.items(), key=lambda x: -x[1]):\n",
     "        print(f\"{subcls}: {count}\")\n",
-    "        \n",
-    "    print(\"\\nSNR Distribution\")\n",
     "    \n",
-    "    # Print ZWARNING\n",
     "    print(\"\\nZWARNING Distribution:\")\n",
     "    zwarning_nonzero = total_objects - zwarning_zero\n",
     "    print(f\"ZWARNING=0: {zwarning_zero} ({zwarning_zero/total_objects:.1%})\")\n",
-    "    print(f\"ZWARNING≠0: {zwarning_nonzero} ({zwarning_nonzero/total_objects:.1%})\")"
+    "    print(f\"ZWARNING≠0: {zwarning_nonzero} ({zwarning_nonzero/total_objects:.1%})\")\n",
+    "\n",
+    "    # New: ZWARNING class breakdown\n",
+    "    print(\"\\nNon-zero ZWARNING Class Distribution:\")\n",
+    "    for cls, count in zwarning_class_counts.items():\n",
+    "        print(f\"{cls}: {count} ({count/zwarning_nonzero:.1%})\")\n",
+    "\n",
+    "    # Return data for plotting\n",
+    "    return {\n",
+    "        'redshifts': dict(redshifts),\n",
+    "        'sn_median_all': dict(sn_median_all),\n",
+    "        'zwarning_class_counts': dict(zwarning_class_counts)\n",
+    "    }\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: AstropyDeprecationWarning: The indent function is deprecated and may be removed in a future version.\n",
-      "        Use textwrap.indent() instead. [astropy.io.fits.hdu.hdulist]\n",
-      "WARNING: VerifyWarning: Error validating header for HDU #2 (note: Astropy uses zero-based indexing).\n",
-      "    Header size is not multiple of 2880: 35070\n",
-      "There may be extra bytes after the last HDU or the file is corrupted. [astropy.io.fits.hdu.hdulist]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping C:/Users/haris/Desktop/EngSci Y3S2/StarDust/StarDustAI\\data/full\\10227\\spec-10227-58224-0419.fits: HDU 2 does not exist.\n",
-      "\n",
-      "Class Distribution:\n",
-      "QSO: 7785 (51.0%)\n",
-      "STAR: 2135 (14.0%)\n",
-      "GALAXY: 5351 (35.0%)\n",
-      "\n",
-      "Subclass Distribution:\n",
-      "nan: 8501\n",
-      "BROADLINE: 4303\n",
-      "M5: 451\n",
-      "F3: 290\n",
-      "STARBURST: 251\n",
-      "M4: 208\n",
-      "WD: 123\n",
-      "M6: 82\n",
-      "F0: 81\n",
-      "CV: 79\n",
-      "M1: 79\n",
-      "F8: 77\n",
-      "STARFORMING: 71\n",
-      "K3: 63\n",
-      "G0: 60\n",
-      "G8: 58\n",
-      "K5: 55\n",
-      "K0: 55\n",
-      "Ld: 42\n",
-      "A2: 34\n",
-      "G4: 28\n",
-      "F2: 26\n",
-      "M3: 25\n",
-      "F6: 22\n",
-      "Ca: 18\n",
-      "K1: 15\n",
-      "A4: 13\n",
-      "A1: 11\n",
-      "B5: 11\n",
-      "AGN: 10\n",
-      "sd: 9\n",
-      "K4: 9\n",
-      "O8: 8\n",
-      "B9: 8\n",
-      "G9: 8\n",
-      "A9: 8\n",
-      "G5: 8\n",
-      "B8: 7\n",
-      "G1: 6\n",
-      "B3: 5\n",
-      "B2: 5\n",
-      "M0: 5\n",
-      "A5: 4\n",
-      "A3: 4\n",
-      "O9: 4\n",
-      "F9: 3\n",
-      "G3: 3\n",
-      "M2: 3\n",
-      "M7: 3\n",
-      "K2: 3\n",
-      "B0: 3\n",
-      "A8: 3\n",
-      "M8: 2\n",
-      "B7: 2\n",
-      "F5: 2\n",
-      "B1: 1\n",
-      "Am: 1\n",
-      "A0: 1\n",
-      "B6: 1\n",
-      "\n",
-      "ZWARNING Distribution:\n",
-      "ZWARNING=0: 11661 (76.4%)\n",
-      "ZWARNING≠0: 3610 (23.6%)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "SUBCLASS_CATEGORIES = ['nan', 'STARFORMING', 'STARBURST', 'AGN', 'O', 'OB', 'B6', 'B9', 'A0', 'A0p', 'F2', 'F5', 'F9', 'G0', 'G2', 'G5', 'K1', 'K3', 'K5', 'K7', 'M0V', 'M2V', 'M1', 'M2', 'M3', 'M4', 'M5', 'M6', 'M7', 'M8', 'L0', 'L1', 'L2', 'L3', 'L4', 'L5', 'L5.5', 'L9', 'T2', 'Carbon', 'Carbon_lines', 'CarbonWD', 'CV', 'BROADLINE']\n",
-    "data_stats(file_paths)"
+    "analysis_data = data_stats(file_paths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_histogram(redshifts, bins=30):\n",
+    "    # Prepare data and labels\n",
+    "    classes = list(redshifts.keys())\n",
+    "    data = [redshifts[cls] for cls in classes if len(redshifts[cls]) > 0]\n",
+    "    \n",
+    "    # Define colors for each class\n",
+    "    colors = ['blue', 'orange', 'green']\n",
+    "    \n",
+    "    # Create stacked histogram\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.hist(data, bins=bins, stacked=True, label=classes, color=colors, edgecolor=\"black\", alpha=0.7)\n",
+    "    \n",
+    "    # Add labels and title\n",
+    "    plt.title('Signal-To-Noise Ratio Distribution by Class', fontsize=14)\n",
+    "    plt.xlabel('Signal to Noise Ratio', fontsize=12)\n",
+    "    plt.ylabel('Count', fontsize=12)\n",
+    "    plt.legend(title=\"Classes\", fontsize=10)\n",
+    "    plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
+    "    \n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "redshift_data = analysis_data['sn_median_all'] \n",
+    "plot_histogram(redshift_data)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
