--- a/data/data_exploration.ipynb
+++ b/data/data_exploration.ipynb
@@ -137,6 +137,17 @@
    "outputs": [],
    "source": [
     "def data_stats(file_paths):\n",
+    "    \"\"\"\n",
+    "    Process a list of FITS files and print statistics related to class \n",
+    "    distribution, subclass distribution, and ZWARNING.\n",
+    "\n",
+    "    Args:\n",
+    "        file_paths (list of str): A list of file paths to the FITS files.\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: A dictionary containing the redshifts, sn_median_all, and \n",
+    "              zwarning class counts.\n",
+    "    \"\"\"\n",
     "    class_counts = defaultdict(int)\n",
     "    subclass_counts = defaultdict(int)\n",
     "    zwarning_zero = 0\n",
@@ -229,10 +240,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_histogram(redshifts, bins=30):\n",
+    "def plot_histogram(vals, bins=30):\n",
+    "    \"\"\"\n",
+    "    Plots a stacked histogram of the redshift / signal-to-noise ratio (SNR) distribution for different classes.\n",
+    "\n",
+    "    Args:\n",
+    "        vals (dict): A dictionary where the keys are class names (strings) and the values are lists of \n",
+    "                           redshift / signal-to-noise ratio (SNR) values for each class.\n",
+    "        bins (int, optional): The number of bins to use in the histogram (default is 30).\n",
+    "\n",
+    "    Returns:\n",
+    "        None: This function generates and displays the plot, but does not return any value.\n",
+    "    \"\"\"\n",
     "    # Prepare data and labels\n",
-    "    classes = list(redshifts.keys())\n",
-    "    data = [redshifts[cls] for cls in classes if len(redshifts[cls]) > 0]\n",
+    "    classes = list(vals.keys())\n",
+    "    data = [vals[cls] for cls in classes if len(vals[cls]) > 0]\n",
     "    \n",
     "    # Define colors for each class\n",
     "    colors = ['blue', 'orange', 'green']\n",
